--- a/cms_blogger/static/cms_blogger/sass/imports/blogger/_blog-entry.scss
+++ b/cms_blogger/static/cms_blogger/sass/imports/blogger/_blog-entry.scss
@@ -161,6 +161,10 @@
                         .entry-image-container{
                             margin-bottom: 10px;
                         }
+                        & + .left-col{
+                            width: auto;
+                            padding-right: 0;
+                        }
                     }
                     white-space: normal;
                     vertical-align: top;
