--- a/cms_blogger/static/cms_blogger/sass/imports/blogger/_blog-header.scss
+++ b/cms_blogger/static/cms_blogger/sass/imports/blogger/_blog-header.scss
@@ -40,7 +40,7 @@
             #blog-banding-image{
                 position: absolute;
                 left: 0;
-                top: 0;
+                bottom: 0;
                 max-height: 100%;
                 @media (max-width:481px){
                     display: none;
